<resources>
    <string name="app_name">TriviaApp</string>
    <string name="enter_question_here">Enter Question Here</string>
    <string name="correct_answer_goes_here">Correct Answer goes here</string>
    <string name="first_wrong_answer_goes_here">First Wrong Answer Goes Here</string>
    <string name="second_wrong_answer_goes_here">Second Wrong Answer Goes here</string>
    <string name="third_wrong_answer_goes_here">Third Wrong Answer Goes Here</string>
    <string name="save_question">Save Question</string>
    <string name="answer1">answer1</string>
    <string name="question">question</string>
    <string name="answer2">answer2</string>
    <string name="answer3">answer3</string>
    <string name="next">Next</string>
    <string name="answer4">answer4</string>
    <string name="wrong_answer_text">wrong. the correct answer is %1$s!</string>
    <string name="correct">Correct!!!!!!!!</string>
    <string name="number_of_correct_answers">You answered %1$d questions correct.</string>
</resources>
