<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:clickable="true">

    <TextView
        android:id="@+id/question_textview"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:text="@string/question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/first_answer_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:background="@android:color/transparent"
        android:text="@string/answer1"
        app:layout_constraintBottom_toTopOf="@+id/second_answer_button"
        app:layout_constraintEnd_toEndOf="@+id/second_answer_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/second_answer_button"
        app:layout_constraintTop_toBottomOf="@+id/question_textview"
        app:layout_constraintVertical_bias="0.38" />

    <Button
        android:id="@+id/second_answer_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/answer2"
        app:layout_constraintBottom_toTopOf="@+id/third_answer_button"
        app:layout_constraintEnd_toEndOf="@+id/third_answer_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/third_answer_button"
        app:layout_constraintTop_toBottomOf="@+id/first_answer_button" />

    <Button
        android:id="@+id/third_answer_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/answer3"
        app:layout_constraintBottom_toTopOf="@+id/fourth_answer_button"
        app:layout_constraintEnd_toEndOf="@+id/fourth_answer_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/fourth_answer_button"
        app:layout_constraintTop_toBottomOf="@+id/second_answer_button" />

    <Button
        android:id="@+id/fourth_answer_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/answer4"
        app:layout_constraintBottom_toTopOf="@+id/next_question_button"
        app:layout_constraintEnd_toEndOf="@+id/next_question_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/next_question_button"
        app:layout_constraintTop_toBottomOf="@+id/third_answer_button" />

    <Button
        android:id="@+id/next_question_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:text="@string/next"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourth_answer_button" />
</android.support.constraint.ConstraintLayout>