<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <EditText
        android:id="@+id/question_edittext"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_question_here"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/correct_answer_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/correct_answer_goes_here"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/first_wrong_answer_edittext"
        app:layout_constraintEnd_toEndOf="@+id/first_wrong_answer_edittext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/first_wrong_answer_edittext"
        app:layout_constraintTop_toBottomOf="@+id/question_edittext"
        app:layout_constraintVertical_bias="0.423" />

    <EditText
        android:id="@+id/first_wrong_answer_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/first_wrong_answer_goes_here"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/second_wrong_answer_edittext"
        app:layout_constraintEnd_toEndOf="@+id/second_wrong_answer_edittext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/second_wrong_answer_edittext"
        app:layout_constraintTop_toBottomOf="@+id/correct_answer_edittext" />

    <EditText
        android:id="@+id/second_wrong_answer_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/second_wrong_answer_goes_here"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/third_wrong_answer_edittext"
        app:layout_constraintEnd_toEndOf="@+id/third_wrong_answer_edittext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/third_wrong_answer_edittext"
        app:layout_constraintTop_toBottomOf="@+id/first_wrong_answer_edittext" />

    <EditText
        android:id="@+id/third_wrong_answer_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/third_wrong_answer_goes_here"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_wrong_answer_edittext" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/save_question"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>